<resources>
    <string name="app_name">Fragments Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="add_client">Add Client</string>
    <string name="edit">Edit</string>
</resources>