<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddClientFragment">

    <EditText
        android:id="@+id/etClientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/etClientAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etClientName"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/address"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/etClientDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:maxLines="15"
        android:lines="15"
        app:layout_constraintBottom_toTopOf="@+id/btnAddClient"
        app:layout_constraintTop_toBottomOf="@+id/etClientAddress"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnAddClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_client"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>